Clean up database, add normalization of values based on guestCount and put additional message for it.